--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Todo List</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section class="main">
-        <h2 class="list-title">Liste des tâches</h2>
+        <h2 class="list-title"><span><span class="todo-counter"></span>Liste des tâches</span></h2>
         <ul class="todos"></ul>
         <form action="#" class="form-add-todo">
             <input type="text" placeholder="Ajouter une tâche" name="todo-title"/>
