Add important checkbox

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <ul class="todos"></ul>
         <form action="#" class="form-add-todo">
             <input type="text" placeholder="Ajouter une tâche" name="todo-title"/>
+            <label for="todo-important">
+                <input type="checkbox" name="todo-important" id="todo-important"/>
+                <span><i class="fas fa-exclamation-circle"></i></span>
+            </label>
             <button>+</button>
         </form>
     </section>
